# enterprise-rag-prototype

./: .env.example  .gitignore  DEVLOG.md  README.md  pyproject.toml  requirements.txt
data/samples/: rag_faq.jsonl  rag_nested_tutorial.json
leee-beep/enterprise-rag-prototype/notebooks/: 01_rag_basics.ipynb
notebooks/: 01_rag_basics.ipynb  README.md
src/enterprise_rag/: __init__.py  __main__.py  chunking.py  cli.py  config.py  documents.py  embeddings.py  factory.py  generation.py  json_config.py  json_loader.py  models.py  pipeline.py  retrieval.py  vector_store.py
src/enterprise_rag/providers/: __init__.py  gemini.py  ollama.py
tests/: __init__.py  test_chunking.py  test_config.py  test_documents.py  test_embeddings.py  test_factory.py  test_gemini_generation.py  test_json_config.py  test_json_loader.py  test_ollama_providers.py  test_provider_config.py  test_retrieval.py  test_vector_store.py
tests/fixtures/documents/: rag_basics.md  retrieval_notes.txt
tests/fixtures/documents/advanced/: hybrid_search.md
